syntax = "proto3";

package InputLogging;

message LogMetadata{
    sint64 system_stopwatch_timestamp_at_kinect_start = 1;
    sint64 first_kinect_device_timestamp_us           = 2;
}

message KeyboardEventDataProto {
    uint64 raw_stopwatch_timestamp = 1;
    uint32 virtual_key_code        = 2;
    uint32 modifiers_flags         = 3;
    bool   is_key_down             = 4;

    enum ModifierKeyState {
        NONE    = 0;
        ALT     = 1;
        CONTROL = 2;
        SHIFT   = 4;
    }
}

message MouseEventDataProto {
    uint64      raw_stopwatch_timestamp = 1;
    MouseButton button                  = 2;
    int32       x                       = 3;
    int32       y                       = 4;
    int32       wheel_delta             = 5;
    bool        is_button_down          = 6;
    bool        is_mouse_moving         = 7;
    bool        is_wheel_moving         = 8;

    enum MouseButton {
        NONE     = 0;
        LEFT     = 1;
        RIGHT    = 2;
        MIDDLE   = 3;
        XBUTTON1 = 4;
        XBUTTON2 = 5;
    }
}
